Changes made style.css

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .paint-slide{
-    background-image: url("../images/green.png");
+    background-image: url("../images/red.png");
 }
 
 .painting-slide {
