--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 
-@media only screen and (max-width: 400px) {
+@media (min-width: 320px) and (max-width: 480px) {
 
     .paint-slide{
         background-image: url("../images/paint-butter-mobile.jpg")
