--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .paint-slide{
-    background-image: url("../images/paint-butter.jpg");
+    background-image: url("../images/paint-butter-mobile.jpg")
 }
 
 .painting-slide {
@@ -35,11 +35,11 @@ body {
 }
 
 .dadi-nebulizer {
-    background-image: url("../images/dadi-breathing.jpg");
+    background-image: url("../images/dadi-breathing-mobile.jpg");
 }
 
 .dadi-yo {
-    background-image: url("../images/dadi-yo.jpg")
+    background-image: url("../images/dadi-yo-mobile.jpg")
 }
 
 .roster-slide {
@@ -47,67 +47,68 @@ body {
 }
 
 .lti-slide0 {
-    background-image: url("../images/lti-waters.png");
+    background-image: url("../images/lti-waters-mobile.png");
 }
 
 .lti-slide1 {
-    background-image: url("../images/lti-cabs.png");
+    background-image: url("../images/lti-cabs-mobile.png");
 }
 
 .pubby-slide0 {
-    background-image: url("../images/maitri-jeans.png");
+    background-image: url("../images/maitri-jeans-mobile.png");
 }
 
 .pubby-slide1 {
-    background-image: url("../images/maitri-jeans-notice.png");
+    background-image: url("../images/maitri-jeans-notice-mobile.png");
 }
 .chocolate-slide {
-    background-image: url("../images/chocolate-bar.PNG");
-}
-
-.last-slide h2{
-    font-size: 10em;
+    background-image: url("../images/chocolate-bar-mobile.png");
 }
 
 
-@media only screen and (max-width: 600px) {
-
+@media only screen and (min-width: 600px) {
+    
     .paint-slide{
-        background-image: url("../images/paint-butter-mobile.jpg")
+        background-image: url("../images/paint-butter.jpg");
     }
 
     .painting-slide {
         background-image: url("../images/painting.jpg");
     }
-    
+
     .dadi-nebulizer {
-        background-image: url("../images/dadi-breathing-mobile.jpg");
+        background-image: url("../images/dadi-breathing.jpg");
     }
-    
+
     .dadi-yo {
-        background-image: url("../images/dadi-yo-mobile.jpg")
+        background-image: url("../images/dadi-yo.jpg")
     }
-    
+
     .roster-slide {
         background-image: url("../images/roster.png");
     }
-    
+
     .lti-slide0 {
-        background-image: url("../images/lti-waters-mobile.png");
+        background-image: url("../images/lti-waters.png");
     }
-    
+
     .lti-slide1 {
-        background-image: url("../images/lti-cabs-mobile.png");
+        background-image: url("../images/lti-cabs.png");
     }
-    
+
     .pubby-slide0 {
-        background-image: url("../images/maitri-jeans-mobile.png");
+        background-image: url("../images/maitri-jeans.png");
     }
-    
+
     .pubby-slide1 {
-        background-image: url("../images/maitri-jeans-notice-mobile.png");
+        background-image: url("../images/maitri-jeans-notice.png");
     }
     .chocolate-slide {
-        background-image: url("../images/chocolate-bar-mobile.png");
+        background-image: url("../images/chocolate-bar.PNG");
     }
+
+    .last-slide h2{
+        font-size: 10em;
+    }
+
 }
