--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body {
     display: unset;
 }
 
+p,h1,h2,h3,h4,h5,h6,small,sub {
+    background-color: black;
+    color: white;
+    font-size: 20px;
+}
+
 .parallax {
     height: 100%;
     background-attachment: fixed;   
@@ -22,8 +28,10 @@ body {
     flex-direction: column;
 }
 
-.splash-slide {
-    z-index: 1;
+#load{
+    z-index:9999;
+    position: fixed;
+    background-color: white;
 }
 
 .paint-slide{
@@ -65,6 +73,9 @@ body {
     background-image: url("../images/chocolate-bar-mobile.png");
 }
 
+.last-slide h2{
+    font-size: 10em;
+}
 
 @media only screen and (min-width: 768px) {
     
@@ -106,9 +117,4 @@ body {
     .chocolate-slide {
         background-image: url("../images/chocolate-bar.PNG");
     }
-
-    .last-slide h2{
-        font-size: 10em;
-    }
-
 }
