--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 p,h1,h2,h3,h4,h5,h6,small,sub {
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 .parallax {
@@ -77,7 +77,13 @@ p,h1,h2,h3,h4,h5,h6,small,sub {
     font-size: 10em;
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 1100px) {
+
+    p,h1,h2,h3,h4,h5,h6,small,sub {
+        background-color: black;
+        color: white;
+        font-size: 20px;
+    }
     
     .paint-slide{
         background-image: url("../images/paint-butter.jpg");
